# opencv-simple

./: .gitignore  README.md  bootstrap.sh  opencv-simple.cabal
OpenCV/: Core.hs
cbits/: opencvsimple_core.cpp  opencvsimple_highgui.cpp  opencvsimple_imgproc.cpp
examples/: Img1.hs
include/: opencvsimple_core.hpp  opencvsimple_highgui.hpp  opencvsimple_imgproc.hpp
rabbit-wires/: CMakeLists.txt
src/: OpenCV.hs
src/OpenCV/: Core.hs  HighGui.hs  Types.hs
src/OpenCV/Internal/: Conversions.chs  Core.chs  HighGui.chs  Types.chs
src/OpenCV/Unsafe/: HighGui.hs
tests/: Main.hs  Utils.hs
tests/OpenCV/Core/: Tests.hs
tests/OpenCV/HighGui/: Tests.hs
